logs/dag_id=Weather_DAG_V4.5/run_id=scheduled__2024-02-12T005600+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T13:06:08.870+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.5.data_to_db scheduled__2024-02-12T00:56:00+00:00 [queued]>
[2024-02-12T13:06:08.913+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.5.data_to_db scheduled__2024-02-12T00:56:00+00:00 [queued]>
[2024-02-12T13:06:08.923+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T13:06:08.992+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 00:56:00+00:00
[2024-02-12T13:06:09.020+0000] {standard_task_runner.py:60} INFO - Started process 14842 to run task
[2024-02-12T13:06:09.047+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.5', 'data_to_db', 'scheduled__2024-02-12T00:56:00+00:00', '--job-id', '9276', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpfony0er1']
[2024-02-12T13:06:09.053+0000] {standard_task_runner.py:88} INFO - Job 9276: Subtask data_to_db
[2024-02-12T13:06:09.241+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.5.data_to_db scheduled__2024-02-12T00:56:00+00:00 [running]> on host 06573eafe810
[2024-02-12T13:06:09.549+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.5' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T00:56:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T00:56:00+00:00'
[2024-02-12T13:06:09.553+0000] {sql.py:276} INFO - Executing: 
        COPY weather(city, dt, houur, temperature_c, pressure_mm, is_rainy)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;
[2024-02-12T13:06:09.591+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T13:06:09.620+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T13:06:09.636+0000] {sql.py:450} INFO - Running statement: 
        COPY weather(city, dt, houur, temperature_c, pressure_mm, is_rainy)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;, parameters: None
[2024-02-12T13:06:09.640+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^

[2024-02-12T13:06:09.653+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.5, task_id=data_to_db, execution_date=20240212T005600, start_date=20240212T130608, end_date=20240212T130609
[2024-02-12T13:06:09.694+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 9276 for task data_to_db (syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^
; 14842)
[2024-02-12T13:06:09.747+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T13:06:09.800+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
